unpackaged/main/default/objects/DetalleTramite__c/DetalleTramite__c.object-meta.xml
<CustomObject>
    <label>Detalle de Trámite</label>
    <nameField>
        <label>Solicitud de Trámite</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalle de Trámite</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>