unpackaged/main/default/objects/DetalleTramite__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <label>Concepto (Tramites)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>