unpackaged/main/default/objects/DetalleTramite__c/fields/Creado_por__c.field-meta.xml
<CustomField>
    <fullName>Creado_por__c</fullName>
    <label>Creado por</label>
    <length>240</length>
    <type>Text</type>
</CustomField>