unpackaged/main/default/objects/DetalleTramite__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Detalle</label>
    <length>200</length>
    <type>Text</type>
</CustomField>