unpackaged/main/default/objects/DetalleTramite__c/fields/Frente__c.field-meta.xml
<CustomField>
    <fullName>Frente__c</fullName>
    <label>Frente</label>
    <length>5</length>
    <type>Text</type>
</CustomField>