unpackaged/main/default/objects/DetalleTramite__c/fields/Numero_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Factura__c</fullName>
    <label>Número de Factura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>