unpackaged/main/default/objects/DetalleTramite__c/fields/Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Solicitud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitudes de Trámites y Transferencias</label>
    <referenceTo>SolicitudesTramitesYTransferencias__c</referenceTo>
    <relationshipLabel>Detalle de Trámite</relationshipLabel>
    <relationshipName>Detalle_de_Tramite</relationshipName>
    <type>Lookup</type>
</CustomField>