unpackaged/main/default/objects/DetalleTramite__c/fields/Subetapa__c.field-meta.xml
<CustomField>
    <fullName>Subetapa__c</fullName>
    <label>Subetapa</label>
    <length>5</length>
    <type>Text</type>
</CustomField>